kind-config/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: linux-pod
  namespace: demok8s
spec:
  containers:
  - name: busybox
    image: busybox
    command:
    - sleep
    - "3600"
    resources:
      requests:
        cpu: 100m
        memory: 128Mi
      limits:
        cpu: 200m
        memory: 256Mi
