kind-config/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
  namespace: demok8s
spec:
  replicas: 2 #จำนวน pods ที่ต้องการ
  selector:
    matchLabels:
      app: nginx #เลือก pods ที่ต้องการ label->app
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
