kind-config/03-service.yaml
# service = load balancer, continue from 02-deployment.yaml, map port 80 to container port 80
# 
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: demok8s
  labels:
    app: nginx
spec:
  type: NodePort
  # NodePort=เปิดให้ถีงจากภายนอกได้, 
  # LoadBalancer=เปิดให้ถีงจากภายนอกได้ from cloud provider,
  # ClusterIP=เปิดให้ถีงจากภายใน
  # ExternalName =  dns 
  ports:
  - name: http
    port: 8800
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
