kind-config/05-deployment-for-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-apache
  labels:
    run: php-apache
  namespace: demok8s
spec:
  replicas: 2
  selector:
    matchLabels:
      run: php-apache
  template:
    metadata:
      labels:
        run: php-apache
    spec:
      containers:
      - name: php-apache
        image: httpd:2.4
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
# สามารถทำได้ deployment + service ขั้นด้วย ---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: demok8s
  labels:
    run: php-apache
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    run: php-apache
