kind-config/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  labels:
    app: client
  namespace: demok8s
spec:
  replicas: 3
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      name: client-pods
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: dekcode/todo-app:v4
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
          requests:
            memory: "500Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: demok8s
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
  - port: 80
    targetPort: 80
