kind-config/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
  namespace: demok8s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      name: mongo-pods
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        resources:
          limits:
            memory: "500Mi"
            cpu: "200m"
          requests:
            memory: "500Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: demok8s
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
