kind-config/08-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: demok8s
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx # Updated to use the new ingressClassName field
  rules:
  - host: demok8s.site
    http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 80


#ทำเป็น load balance เพื่อจะเข้าถึง service เป็นตัวคลุม service
